# radar-signal-processing-sim

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  extending.md  modes.md  physics.md  scenarios.md
examples/: __init__.py  basic_comparison.py  blind_speed_demo.py  clutter_rejection.py  platform_comparison.py  range_ambiguity_demo.py  rcs_comparison.py  tws_tracking_demo.py
frontend/: package-lock.json  package.json
frontend/frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ControlBar.tsx  DetectionTable.tsx  ModeSelector.tsx  ParamControls.tsx  RadarScope.tsx
frontend/src/hooks/: useRadarWebSocket.ts
frontend/src/types/: radar.ts
frontend/src/utils/: scopeRenderer.ts
src/radar_sim/: __init__.py  __main__.py  engine.py  models.py
src/radar_sim/api/: __init__.py  server.py
src/radar_sim/modes/: __init__.py  base_mode.py  mti.py  pulse_doppler.py  src.py
src/radar_sim/modes/tws/: __init__.py  association.py  ekf_tracker.py  scan_controller.py  track_manager.py  tws_mode.py
src/radar_sim/radar/: __init__.py  physics.py
src/radar_sim/scenario/: __init__.py  presets.py  rcs_database.py  world.py
tests/: test_engine.py  test_models.py  test_mti_mode.py  test_physics.py  test_pulse_doppler.py  test_scenarios.py  test_src_mode.py  test_tws_mode.py
